# soramimi-align

./: .gitignore  README.md  pyproject.toml
.github/scripts/: update_version.sh
.github/workflows/: update-version.yaml
data/input/: sample_lyric.txt  sample_post_errata.json  sample_pre_errata.json  sample_worddict.csv
src/soramimi_align/: align_mora.py  align_word.py  create_phonetic_search_dataset.py  evaluate_phonetic_search_dataset.py  make_draft.py  schemas.py
tests/: test_align_mora.py  test_align_word.py  test_evaluate_phonetic_search_dataset.py  test_make_draft.py  test_schemas.py
