[project]
name = "soramimi-align"
version = "v0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GitHub Actions", email = "actions@github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alkana>=0.0.3",
    "editdistance>=0.8.1",
    "ipadic>=1.0.0",
    "jaconv>=0.4.0",
    "jamorasep>=0.0.1",
    "jasyllablesep>=0.0.0",
    "kanasim>=0.0.3",
    "mecab-python3>=1.0.10",
    "pandas>=2.2.3",
    "pyopenjtalk>=0.4.0",
    "sudachidict-full>=20241021",
    "sudachipy>=0.6.9",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
    "jphrase>=0.0.3",
    "neologdn>=0.5.3",
    "pyperclip>=1.9.0",
    "pytest>=8.3.4",
    "scipy>=1.15.1",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
fmt = "task ruff_format && task ruff_fix"
ruff_format = "uvx ruff format"
ruff_fix = "uvx ruff check --fix --extend-select I"
test = "pytest -v"
make_draft_sample = """
    python src/soramimi_align/make_draft.py \
    -i data/input/sample_lyric.txt \
    -o data/output/sample_draft.txt \
    -w data/input/sample_worddict.csv \
    -pree data/input/sample_pre_errata.json \
    -poste data/input/sample_post_errata.json
    """
align_mora_sample = """
    python src/soramimi_align/align_mora.py \
    -i data/output/sample_draft.txt \
    -o data/output/sample_mora.csv
    """
align_word_sample = """
    python src/soramimi_align/align_word.py \
    -i data/output/sample_draft.txt \
    -o data/output/sample_word.csv
    """
create_psd_sample = """
    python src/soramimi_align/create_phonetic_search_dataset.py \
    -w data/input/worddict/baseball.csv \
    -a data/output/aligned_words.csv \
    -o data/output/sample_phonetic_search_dataset.json
    """

evaluate_psd_sample = """
    python src/soramimi_align/evaluate_phonetic_search_dataset.py \
    -i data/output/sample_phonetic_search_dataset.json \
    -v
    """
